--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   url_launcher: ^6.0.9
   firebase: ^9.0.1
   cloud_firestore: ^2.3.0
+  shared_preferences: ^2.0.6
   
 
 dev_dependencies:
